see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

28-Sep-2010 Ron Severdia
 # Fixed misplaced DIV in Atomic
 ^ Updated Atomic preview & thumbnail
 ^ Updated Blueprint plug-ins
 # Fix validation issue in Atomic login override
 
28-Sep-2010 Christophe Demko
 # [#22603] XML well formedness errors in com_messages and com_weblinks (thanks Rouven Weßling)
 # [#22125] We don't have CSS for system "warning" messages - deleting and moving icons

28-Sep-2010 Mark Dexter
 # [#21766] If an unpublished article is linked there are errors instead of a message/model change

28-Sep-2010 Jean-Marie Simonet
 $ Adding missing strings in installation.

27-Sep-2010 Jean-Marie Simonet
 # [#21825] Pagebreak and Article Buttons don't work when using CodeMirror. Thanks Mathavan.
 $ Adding missing strings in front-end
 #  [#22432] Administrator login form not consistent in Chrome. Thanks Bill and Viet.
 
26-Sep-2010 Jean-Marie Simonet
 # [#22596] Implementing language filtering in modals + normalizing filters/columns + fixing Newsfeeds language filtering

25-Sep-2010 Jean-Marie Simonet
 # [#22493] Can not register user fatal error message

24-Sep-2010 Jean-Marie Simonet
 # [#22016] Breadcrumbs missing from single items. Thanks Christophe.
 #$ [#22576] Component Manager Options - needless use of name options in tab headings + Normalizing some strings.
 # [#22549] No from user shown on Private Messages. Thanks Tim.

22-Sep-2010 Jean-Marie Simonet
 ^ [#22514] Upgrade TinyMCE to 3.3.9. Thanks Michael.
 #$ [#21970] Some_message_here language string needs proper message.
 $ Missing string in front-end

-------------------- 1.6.0 Beta10 Release [20-Sep-2010] ------------------
