@@ -6,6 +6,8 @@
 
 COM_BANNERS="Banners"
 COM_BANNERS_BANNERS="Banners"
+COM_BANNERS_CATEGORY_ADD_TITLE= "Category Manager: Add A New Banners Category"
+COM_BANNERS_CATEGORY_EDIT_TITLE= "Category Manager: Edit A Banners Category"
 COM_BANNERS_CATEGORIES="Categories"
 COM_BANNERS_CLIENTS="Clients"
 COM_BANNERS_TRACKS="Tracks"
