@@ -8,6 +8,8 @@ COM_CONTACT="Contacts"
 COM_CONTACT_CATEGORIES="Categories"
 COM_CONTACT_CATEGORIES_VIEW_DEFAULT_DESC="Shows a list of contact categories within a category."
 COM_CONTACT_CATEGORIES_VIEW_DEFAULT_TITLE="List All Contact Categories"
+COM_CONTACT_CATEGORY_ADD_TITLE= "Category Manager: Add A New Contact Category"
+COM_CONTACT_CATEGORY_EDIT_TITLE= "Category Manager: Edit A Contact Category"
 COM_CONTACT_CATEGORY_VIEW_DEFAULT_DESC="This view lists the contacts in a category."
 COM_CONTACT_CATEGORY_VIEW_DEFAULT_TITLE="List Contacts in a Category"
 COM_CONTACT_CONTACT_VIEW_DEFAULT_DESC="This links to the contact information for one contact."
