@@ -8,6 +8,8 @@ COM_WEBLINKS="Weblinks"
 COM_WEBLINKS_XML_DESCRIPTION="Component for weblinks management"
 COM_WEBLINKS_LINKS="Links"
 COM_WEBLINKS_CATEGORIES="Categories"
+COM_WEBLINKS_CATEGORY_ADD_TITLE= "Category Manager: Add A New Weblinks Category"
+COM_WEBLINKS_CATEGORY_EDIT_TITLE= "Category Manager: Edit A Weblinks Category"
 COM_WEBLINKS_CATEGORY_VIEW_DEFAULT_DESC="Displays a list of weblinks for a category"
 COM_WEBLINKS_CATEGORY_VIEW_DEFAULT_TITLE="List Web Links in a Category"
 COM_WEBLINKS_CATEGORIES_VIEW_DEFAULT_DESC="Show all the web link categories within a category."
